Fixed bug [ 1931009 ] CRB-Alignment on the "Define Leave Type" should be adjusted.

--- a/php/orangehrm/themes/beyondT/css/menu.css
+++ b/php/orangehrm/themes/beyondT/css/menu.css
@@ -30,7 +30,7 @@
 #menu a {
 	text-decoration: none;
 	color: #444444;
-	width: 125px;
+	width: 130px;
 	font-family: Arial, Helvetica, sans-serif;
 	text-transform: capitalize;
 	height: 22px;
